--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.6",
     "express": "^4.18.2"
   },
   "devDependencies": {
