--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@prisma/client": "^4.13.0",
     "axios": "^1.3.6",
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
