--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@prisma/client": "^4.13.0",
     "axios": "^1.3.6",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.1",
     "nodemon": "^2.0.22",
