--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "@types/react-dom": "^18.2.0",
     "axios": "^1.3.6",
     "dotenv": "^16.0.3",
+    "feather-icons": "^4.29.0",
     "framer-motion": "^10.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
