--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,13 @@
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.1",
     "nodemon": "^2.0.22",
