--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
