--- a/client/package.json
+++ b/client/package.json
@@ -18,13 +18,17 @@
     "dotenv": "^16.0.3",
     "feather-icons": "^4.29.0",
     "framer-motion": "^10.12.4",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
