--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.16.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.13.0",
