--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^4.10.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
